--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -31,14 +31,14 @@
     <bool name="config_intrusiveNotificationLed">true</bool>
 
     <!-- Is the battery LED intrusive? Used to decide if there should be a disable option -->
-   <!-- <bool name="config_intrusiveBatteryLed">true</bool> -->
+    <add-resource type="bool" name="config_intrusiveBatteryLed">true</add-resource>
 
     <!-- Does the notification LED support multiple colors? Used to decide if the user can change the colors -->
-   <!-- <bool name="config_multiColorNotificationLed">true</bool> -->
+    <add-resource type="bool" name="config_multiColorNotificationLed">true</add-resource>
 
     <!-- Does the battery LED support multiple colors? Used to decide if the user can change the colors -->
-   <!-- <bool name="config_multiColorBatteryLed">true</bool> -->
-
+    <add-resource type="bool" name="config_multiColorBatteryLed">true</add-resource>
+							
     <!-- Default color for notification LED is green. -->
     <color name="config_defaultNotificationColor">#ff00ff00</color>
 
